--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
-                    <li><a href="sobre.html">Sobre Nós</a></li>
+                    <li><a href="sobre.html">Sobre nós</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
-            <!-- Botão de modo escuro -->
-            <button id="toggle-theme" class="theme-toggle-btn">🌙</button>
         </div>
     </header>
 
@@ -28,15 +26,11 @@
     <section class="home">
         <div class="container">
             <h2>Bem-vindo à TH Soluções em TI</h2>
-            <p>A TH Soluções em TI é uma empresa especializada em oferecer soluções tecnológicas para empresas, com foco em inovação, segurança e eficiência. Descubra como podemos ajudar sua empresa a alcançar novos patamares.</p>
-            <p><strong>Serviços Oferecidos:</strong></p>
+            <p>A TH Soluções oferece serviços tecnológicos especializados para sua empresa, com foco em inovação e segurança.</p>
             <ul>
-                <li><a href="servicos.html">Cyber Security</a></li>
-                <li><a href="servicos.html">Cabeamento Estruturado</a></li>
-                <li><a href="servicos.html">Segurança Eletrônica</a></li>
-                <li><a href="servicos.html">Service Desk/Suporte Técnico</a></li>
-                <li><a href="servicos.html">Backup e Recuperação de Dados</a></li>
-                <li><a href="servicos.html">Internet das Coisas (IoT)</a></li>
+                <li><a href="servicos.html">Conheça nossos serviços</a></li>
+                <li><a href="sobre.html">Saiba mais sobre nós</a></li>
+                <li><a href="contato.html">Entre em contato</a></li>
             </ul>
         </div>
     </section>
@@ -48,6 +42,7 @@
         </div>
     </footer>
 
+    <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
