--- a/index.html
+++ b/index.html
@@ -26,12 +26,31 @@
     <section class="home">
         <div class="container">
             <h2>Bem-vindo à TH Soluções em TI</h2>
-            <p>A TH Soluções oferece serviços tecnológicos especializados para sua empresa, com foco em inovação e segurança.</p>
+            <p>A <strong>TH Soluções em TI</strong> é especializada em soluções tecnológicas para empresas de diferentes setores. Nosso compromisso é oferecer serviços de alta qualidade e segurança, visando sempre a inovação e a satisfação dos nossos clientes.</p>
+            
+            <h3>Nossos Serviços</h3>
+            <p>Oferecemos serviços especializados em diversas áreas da tecnologia, como:</p>
             <ul>
-                <li><a href="servicos.html">Conheça nossos serviços</a></li>
-                <li><a href="sobre.html">Saiba mais sobre nós</a></li>
-                <li><a href="contato.html">Entre em contato</a></li>
+                <li><strong>Cyber Security</strong> – Proteção de dados e redes contra ameaças digitais.</li>
+                <li><strong>Cabeamento Estruturado</strong> – Soluções de infraestrutura de rede eficientes e seguras.</li>
+                <li><strong>Segurança Eletrônica</strong> – Sistemas de monitoramento e controle de acesso.</li>
+                <li><strong>Service Desk / Suporte Técnico</strong> – Atendimento e suporte especializado 24/7.</li>
+                <li><strong>Backup e Recuperação de Dados</strong> – Proteção e recuperação de dados em situações de emergência.</li>
+                <li><strong>Internet das Coisas (IoT)</strong> – Automação inteligente e conectividade para sua empresa.</li>
             </ul>
+
+            <h3>Por que escolher a TH Soluções?</h3>
+            <p>Com mais de X anos de experiência no mercado, nossa equipe é formada por profissionais altamente qualificados, que utilizam as tecnologias mais avançadas para garantir a segurança, eficiência e inovação em todas as soluções oferecidas. Atuamos em diversos setores, como:</p>
+            <ul>
+                <li>Indústrias</li>
+                <li>Comércio</li>
+                <li>Saúde</li>
+                <li>Educação</li>
+                <li>Setor público</li>
+            </ul>
+
+            <h3>Entre em Contato</h3>
+            <p>Se você está interessado em saber mais sobre como podemos ajudar a sua empresa, entre em contato conosco. Acesse nossa página de <a href="contato.html">contato</a> para mais informações.</p>
         </div>
     </section>
 
