--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             
             <h3>Nossos Serviços</h3>
             <p>Oferecemos serviços especializados em diversas áreas da tecnologia, como:</p>
-            <ul>
+            <ul class="service-list">
                 <li><strong>Cyber Security</strong> – Proteção de dados e redes contra ameaças digitais.</li>
                 <li><strong>Cabeamento Estruturado</strong> – Soluções de infraestrutura de rede eficientes e seguras.</li>
                 <li><strong>Segurança Eletrônica</strong> – Sistemas de monitoramento e controle de acesso.</li>
@@ -41,7 +41,7 @@
 
             <h3>Por que escolher a TH Soluções?</h3>
             <p>Com mais de X anos de experiência no mercado, nossa equipe é formada por profissionais altamente qualificados, que utilizam as tecnologias mais avançadas para garantir a segurança, eficiência e inovação em todas as soluções oferecidas. Atuamos em diversos setores, como:</p>
-            <ul>
+            <ul class="sector-list">
                 <li>Indústrias</li>
                 <li>Comércio</li>
                 <li>Saúde</li>
