--- a/contatos.html
+++ b/contatos.html
@@ -30,7 +30,11 @@
             <div class="contact-info">
                 <p><strong>Email:</strong> contato@thsolucoes.com</p>
                 <p><strong>Telefone:</strong> (11) 98765-4321</p>
-                <p><strong>Endereço:</strong> Rua da Tecnologia, 123 - São Paulo, SP</p>
+                <p><strong>Endereço:</strong> Rua da Tecnologia, 123 - Bairro Inovação - Aracaju, SE</p>
+                
+                <!-- Link para WhatsApp -->
+                <p><strong>WhatsApp:</strong> <a href="https://wa.me/5579996385912" target="_blank" class="whatsapp-link">Clique aqui para conversar conosco</a></p>
+                
                 <form>
                     <label for="nome">Nome:</label>
                     <input type="text" id="nome" name="nome" required>
@@ -53,5 +57,6 @@
             <p>&copy; 2024 TH Soluções em TI. Todos os direitos reservados.</p>
         </div>
     </footer>
+
 </body>
 </html>
