--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TH Soluções em TI</title>
+    <title>TH Soluções em TI - Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,42 +15,19 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
-                    <li><a href="sobre.html">Sobre nós</a></li>
-                    <li><a href="contato.html">Contato</a></li>
+                    <li><a href="sobre.html">Sobre Nós</a></li>
+                    <li><a href="contatos.html">Contatos</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Seção Home -->
+    <!-- Seção Principal/Home -->
     <section class="home">
-        <div class="container">
-            <h2>Bem-vindo à TH Soluções em TI</h2>
-            <p>A <strong>TH Soluções em TI</strong> é especializada em soluções tecnológicas para empresas de diferentes setores. Nosso compromisso é oferecer serviços de alta qualidade e segurança, visando sempre a inovação e a satisfação dos nossos clientes.</p>
-            
-            <h3>Nossos Serviços</h3>
-            <p>Oferecemos serviços especializados em diversas áreas da tecnologia, como:</p>
-            <ul class="service-list">
-                <li><strong>Cyber Security</strong> – Proteção de dados e redes contra ameaças digitais.</li>
-                <li><strong>Cabeamento Estruturado</strong> – Soluções de infraestrutura de rede eficientes e seguras.</li>
-                <li><strong>Segurança Eletrônica</strong> – Sistemas de monitoramento e controle de acesso.</li>
-                <li><strong>Service Desk / Suporte Técnico</strong> – Atendimento e suporte especializado 24/7.</li>
-                <li><strong>Backup e Recuperação de Dados</strong> – Proteção e recuperação de dados em situações de emergência.</li>
-                <li><strong>Internet das Coisas (IoT)</strong> – Automação inteligente e conectividade para sua empresa.</li>
-            </ul>
-
-            <h3>Por que escolher a TH Soluções?</h3>
-            <p>Com mais de X anos de experiência no mercado, nossa equipe é formada por profissionais altamente qualificados, que utilizam as tecnologias mais avançadas para garantir a segurança, eficiência e inovação em todas as soluções oferecidas. Atuamos em diversos setores, como:</p>
-            <ul class="sector-list">
-                <li>Indústrias</li>
-                <li>Comércio</li>
-                <li>Saúde</li>
-                <li>Educação</li>
-                <li>Setor público</li>
-            </ul>
-
-            <h3>Entre em Contato</h3>
-            <p>Se você está interessado em saber mais sobre como podemos ajudar a sua empresa, entre em contato conosco. Acesse nossa página de <a href="contato.html">contato</a> para mais informações.</p>
+        <div class="home-content">
+            <h2>Transformando Tecnologia em Soluções</h2>
+            <p>Somos especialistas em Cyber Security, IoT, Suporte, Segurança Eletrônica e mais. Junte-se a nós e leve sua empresa para o futuro!</p>
+            <a href="servicos.html" class="btn-primary">Conheça nossos Serviços</a>
         </div>
     </section>
 
@@ -61,7 +38,6 @@
         </div>
     </footer>
 
-    <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
