--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TH Soluções em TI - Home</title>
+    <title>TH Soluções em TI - Início</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
             <h1 class="logo">TH Soluções em TI</h1>
             <nav class="navbar">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="sobre.html">Sobre Nós</a></li>
                     <li><a href="contatos.html">Contatos</a></li>
@@ -22,12 +22,36 @@
         </div>
     </header>
 
-    <!-- Seção Principal/Home -->
-    <section class="home">
-        <div class="home-content">
-            <h2>Transformando Tecnologia em Soluções</h2>
-            <p>Somos especialistas em Cyber Security, IoT, Suporte, Segurança Eletrônica e mais. Junte-se a nós e leve sua empresa para o futuro!</p>
-            <a href="servicos.html" class="btn-primary">Conheça nossos Serviços</a>
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <h2>Levamos sua empresa ao futuro com tecnologia inovadora</h2>
+            <p>Soluções de TI personalizadas para o seu negócio. Cyber Security, IoT, Suporte e muito mais.</p>
+            <a href="servicos.html" class="btn-primary">Nossos Serviços</a>
+        </div>
+    </section>
+
+    <!-- Serviços Destaques -->
+    <section class="highlights">
+        <div class="container">
+            <h2 class="section-title">Por que escolher a TH Soluções?</h2>
+            <div class="features">
+                <div class="feature">
+                    <img src="images/security-icon.png" alt="Segurança">
+                    <h3>Cyber Security</h3>
+                    <p>Protegemos seus dados com as mais avançadas tecnologias de segurança digital.</p>
+                </div>
+                <div class="feature">
+                    <img src="images/iot-icon.png" alt="IoT">
+                    <h3>IoT</h3>
+                    <p>Conectamos dispositivos para otimizar processos e criar soluções inteligentes.</p>
+                </div>
+                <div class="feature">
+                    <img src="images/support-icon.png" alt="Suporte">
+                    <h3>Suporte Técnico</h3>
+                    <p>Equipe especializada disponível para resolver problemas e garantir a continuidade do seu negócio.</p>
+                </div>
+            </div>
         </div>
     </section>
 
