--- a/servicos.html
+++ b/servicos.html
@@ -26,43 +26,49 @@
     <section id="servicos" class="section">
         <div class="container">
             <h2 class="section-title">Nossos Serviços</h2>
-            <p class="section-description">Confira nossas soluções inovadoras e personalizadas para a sua empresa.</p>
+            <p class="section-description">Oferecemos soluções personalizadas e inovadoras para atender às necessidades específicas da sua empresa.</p>
             <div class="service-list">
+                <!-- Serviço 1 -->
                 <div class="service">
                     <h3>Cyber Security</h3>
                     <p>Proteção de redes e dados contra ataques cibernéticos, garantindo a segurança da sua empresa 24/7.</p>
                     <p><strong>Valor:</strong> R$ 1.200/mês</p>
-                    <button class="service-btn">Saiba Mais</button>
+                    <button class="service-btn" onclick="showDetails('Cyber Security')">Saiba Mais</button>
                 </div>
+                <!-- Serviço 2 -->
                 <div class="service">
                     <h3>Cabeamento Estruturado</h3>
                     <p>Planejamento, instalação e manutenção de redes corporativas, garantindo comunicação eficiente e segura.</p>
                     <p><strong>Valor:</strong> R$ 900 por projeto</p>
-                    <button class="service-btn">Saiba Mais</button>
+                    <button class="service-btn" onclick="showDetails('Cabeamento Estruturado')">Saiba Mais</button>
                 </div>
+                <!-- Serviço 3 -->
                 <div class="service">
                     <h3>Segurança Eletrônica</h3>
                     <p>Monitoramento contínuo e fornecimento de equipamentos de segurança de última geração para sua empresa.</p>
                     <p><strong>Valor:</strong> R$ 800/mês</p>
-                    <button class="service-btn">Saiba Mais</button>
+                    <button class="service-btn" onclick="showDetails('Segurança Eletrônica')">Saiba Mais</button>
                 </div>
+                <!-- Serviço 4 -->
                 <div class="service">
                     <h3>Service Desk</h3>
                     <p>Suporte técnico especializado 24/7 para resolver qualquer problema com rapidez e eficiência.</p>
                     <p><strong>Valor:</strong> R$ 1.500/mês</p>
-                    <button class="service-btn">Saiba Mais</button>
+                    <button class="service-btn" onclick="showDetails('Service Desk')">Saiba Mais</button>
                 </div>
+                <!-- Serviço 5 -->
                 <div class="service">
                     <h3>Backup e Recuperação</h3>
                     <p>Soluções de backup para proteger seus dados essenciais e garantir recuperação rápida em caso de desastre.</p>
                     <p><strong>Valor:</strong> R$ 1.000/mês</p>
-                    <button class="service-btn">Saiba Mais</button>
+                    <button class="service-btn" onclick="showDetails('Backup e Recuperação')">Saiba Mais</button>
                 </div>
+                <!-- Serviço 6 -->
                 <div class="service">
                     <h3>IoT</h3>
                     <p>Automação inteligente para sua empresa, integrando dispositivos para otimizar operações e processos.</p>
                     <p><strong>Valor:</strong> R$ 1.200/mês</p>
-                    <button class="service-btn">Saiba Mais</button>
+                    <button class="service-btn" onclick="showDetails('IoT')">Saiba Mais</button>
                 </div>
             </div>
         </div>
@@ -74,5 +80,12 @@
             <p>&copy; 2024 TH Soluções em TI. Todos os direitos reservados.</p>
         </div>
     </footer>
+
+    <!-- JavaScript -->
+    <script>
+        function showDetails(serviceName) {
+            alert(`Mais detalhes sobre o serviço: ${serviceName}. Entre em contato para informações adicionais.`);
+        }
+    </script>
 </body>
 </html>
