--- a/servicos.html
+++ b/servicos.html
@@ -17,6 +17,7 @@
                     <li><a href="#servicos">Serviços</a></li>
                     <li><a href="contatos.html">Contatos</a></li>
                     <li><a href="sobre.html">Sobre Nós</a></li>
+                    <li><a href="contrato.html">Contrato</a></li> <!-- Novo link para contrato -->
                 </ul>
             </nav>
         </div>
