--- a/servicos.html
+++ b/servicos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serviços - TH Soluções em TI</title>
+    <title>Serviços e Contrato - TH Soluções em TI</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
                     <li><a href="#servicos">Serviços</a></li>
                     <li><a href="contatos.html">Contatos</a></li>
                     <li><a href="sobre.html">Sobre Nós</a></li>
-                    <li><a href="contrato.html">Contrato</a></li> <!-- Novo link para contrato -->
+                    <li><a href="#contrato">Contrato</a></li> <!-- Link para contrato na mesma página -->
                 </ul>
             </nav>
         </div>
@@ -72,6 +72,25 @@
                     <button class="service-btn" onclick="showDetails('IoT')">Saiba Mais</button>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- Contrato -->
+    <section id="contrato" class="section">
+        <div class="container">
+            <h2 class="section-title">Contrato de Prestação de Serviços</h2>
+            <p class="section-description">Abaixo estão os termos e condições para a contratação dos nossos serviços.</p>
+            
+            <h3>1. Termos e Condições Gerais</h3>
+            <p>Este contrato estabelece as condições para a prestação dos serviços descritos no site da TH Soluções em TI...</p>
+
+            <h3>2. Responsabilidades</h3>
+            <p>A empresa se compromete a fornecer os serviços conforme descrito, sendo responsável pela qualidade e pela entrega no prazo...</p>
+
+            <h3>3. Validade</h3>
+            <p>O contrato terá validade após a assinatura de ambas as partes...</p>
+
+            <button onclick="window.location.href='contatos.html'">Solicitar Assinatura</button>
         </div>
     </section>
 
