--- a/servicos.html
+++ b/servicos.html
@@ -35,6 +35,7 @@
                     <p>Proteção de redes e dados contra ataques cibernéticos, garantindo a segurança da sua empresa 24/7.</p>
                     <p><strong>Valor:</strong> R$ 1.200/mês</p>
                     <button class="service-btn" onclick="showDetails('Cyber Security')">Saiba Mais</button>
+                    <button class="contract-btn" onclick="location.href='contatos.html?servico=Cyber Security'">Contratar Serviço</button> <!-- Botão para contratar -->
                 </div>
                 <!-- Serviço 2 -->
                 <div class="service">
@@ -42,6 +43,7 @@
                     <p>Planejamento, instalação e manutenção de redes corporativas, garantindo comunicação eficiente e segura.</p>
                     <p><strong>Valor:</strong> R$ 900 por projeto</p>
                     <button class="service-btn" onclick="showDetails('Cabeamento Estruturado')">Saiba Mais</button>
+                    <button class="contract-btn" onclick="location.href='contatos.html?servico=Cabeamento Estruturado'">Contratar Serviço</button> <!-- Botão para contratar -->
                 </div>
                 <!-- Serviço 3 -->
                 <div class="service">
@@ -49,6 +51,7 @@
                     <p>Monitoramento contínuo e fornecimento de equipamentos de segurança de última geração para sua empresa.</p>
                     <p><strong>Valor:</strong> R$ 800/mês</p>
                     <button class="service-btn" onclick="showDetails('Segurança Eletrônica')">Saiba Mais</button>
+                    <button class="contract-btn" onclick="location.href='contatos.html?servico=Segurança Eletrônica'">Contratar Serviço</button> <!-- Botão para contratar -->
                 </div>
                 <!-- Serviço 4 -->
                 <div class="service">
@@ -56,6 +59,7 @@
                     <p>Suporte técnico especializado 24/7 para resolver qualquer problema com rapidez e eficiência.</p>
                     <p><strong>Valor:</strong> R$ 1.500/mês</p>
                     <button class="service-btn" onclick="showDetails('Service Desk')">Saiba Mais</button>
+                    <button class="contract-btn" onclick="location.href='contatos.html?servico=Service Desk'">Contratar Serviço</button> <!-- Botão para contratar -->
                 </div>
                 <!-- Serviço 5 -->
                 <div class="service">
@@ -63,6 +67,7 @@
                     <p>Soluções de backup para proteger seus dados essenciais e garantir recuperação rápida em caso de desastre.</p>
                     <p><strong>Valor:</strong> R$ 1.000/mês</p>
                     <button class="service-btn" onclick="showDetails('Backup e Recuperação')">Saiba Mais</button>
+                    <button class="contract-btn" onclick="location.href='contatos.html?servico=Backup e Recuperação'">Contratar Serviço</button> <!-- Botão para contratar -->
                 </div>
                 <!-- Serviço 6 -->
                 <div class="service">
@@ -70,6 +75,7 @@
                     <p>Automação inteligente para sua empresa, integrando dispositivos para otimizar operações e processos.</p>
                     <p><strong>Valor:</strong> R$ 1.200/mês</p>
                     <button class="service-btn" onclick="showDetails('IoT')">Saiba Mais</button>
+                    <button class="contract-btn" onclick="location.href='contatos.html?servico=IoT'">Contratar Serviço</button> <!-- Botão para contratar -->
                 </div>
             </div>
         </div>
