--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
             <h2 class="section-title">Por que escolher a TH Soluções?</h2>
             <div class="features">
                 <div class="feature">
-                    <img src="images/security-icon.png" alt="Segurança">
+                    <img src="https://images.unsplash.com/photo-1607907645292-03a60174c2cf" alt="Cyber Security">
                     <h3>Cyber Security</h3>
                     <p>Protegemos seus dados com as mais avançadas tecnologias de segurança digital.</p>
                 </div>
                 <div class="feature">
-                    <img src="images/iot-icon.png" alt="IoT">
+                    <img src="https://images.unsplash.com/photo-1556740749-887f6717d7e4" alt="IoT">
                     <h3>IoT</h3>
                     <p>Conectamos dispositivos para otimizar processos e criar soluções inteligentes.</p>
                 </div>
                 <div class="feature">
-                    <img src="images/support-icon.png" alt="Suporte">
+                    <img src="https://images.unsplash.com/photo-1561948953-4817fdff7edb" alt="Suporte Técnico">
                     <h3>Suporte Técnico</h3>
                     <p>Equipe especializada disponível para resolver problemas e garantir a continuidade do seu negócio.</p>
                 </div>
