--- a/index.html
+++ b/index.html
@@ -1,67 +1,24 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TH Soluções em TI - Início</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <!-- Cabeçalho -->
-    <header class="header">
-        <div class="container">
-            <h1 class="logo">TH Soluções em TI</h1>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
-                    <li><a href="sobre.html">Sobre Nós</a></li>
-                    <li><a href="contatos.html">Contatos</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content">
-            <h2>Levamos sua empresa ao futuro com tecnologia inovadora</h2>
-            <p>Soluções de TI personalizadas para o seu negócio. Cyber Security, IoT, Suporte e muito mais.</p>
-            <a href="servicos.html" class="btn-primary">Nossos Serviços</a>
-        </div>
-    </section>
-
-    <!-- Serviços Destaques -->
-    <section class="highlights">
-        <div class="container">
-            <h2 class="section-title">Por que escolher a TH Soluções?</h2>
-            <div class="features">
-                <div class="feature">
-                    <img src="https://images.unsplash.com/photo-1607907645292-03a60174c2cf" alt="Cyber Security">
-                    <h3>Cyber Security</h3>
-                    <p>Protegemos seus dados com as mais avançadas tecnologias de segurança digital.</p>
-                </div>
-                <div class="feature">
-                    <img src="https://images.unsplash.com/photo-1556740749-887f6717d7e4" alt="IoT">
-                    <h3>IoT</h3>
-                    <p>Conectamos dispositivos para otimizar processos e criar soluções inteligentes.</p>
-                </div>
-                <div class="feature">
-                    <img src="https://images.unsplash.com/photo-1561948953-4817fdff7edb" alt="Suporte Técnico">
-                    <h3>Suporte Técnico</h3>
-                    <p>Equipe especializada disponível para resolver problemas e garantir a continuidade do seu negócio.</p>
-                </div>
+<!-- Serviços Destaques -->
+<section class="highlights">
+    <div class="container">
+        <h2 class="section-title">Por que escolher a TH Soluções?</h2>
+        <div class="features">
+            <div class="feature">
+                <img src="https://images.unsplash.com/photo-1607907645292-03a60174c2cf" alt="Cyber Security">
+                <h3>Cyber Security</h3>
+                <p>Protegemos seus dados com as mais avançadas tecnologias de segurança digital.</p>
+            </div>
+            <div class="feature">
+                <!-- Imagem de IoT atualizada -->
+                <img src="https://images.ctfassets.net/5i1m3im8l2b5/2g17zgCFVcG2WdFZ5quItK/8c62eaa94bbf18d19a2a441dc32ae58e/What_is_IoT.jpg?w=1200&h=630&fl=progressive&q=50&fm=jpg" alt="IoT">
+                <h3>IoT</h3>
+                <p>Conectamos dispositivos para otimizar processos e criar soluções inteligentes.</p>
+            </div>
+            <div class="feature">
+                <img src="https://images.unsplash.com/photo-1561948953-4817fdff7edb" alt="Suporte Técnico">
+                <h3>Suporte Técnico</h3>
+                <p>Equipe especializada disponível para resolver problemas e garantir a continuidade do seu negócio.</p>
             </div>
         </div>
-    </section>
-
-    <!-- Rodapé -->
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 TH Soluções em TI. Todos os direitos reservados.</p>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
+    </div>
+</section>
