--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="container">
             <h1 class="logo">TH Soluções em TI</h1>
-            <nav class="navbar">
+            <nav class="navbar" aria-label="Navegação principal">
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
@@ -37,17 +37,17 @@
             <h2 class="section-title">Por que escolher a TH Soluções?</h2>
             <div class="features">
                 <div class="feature">
-                    <img src="https://images.unsplash.com/photo-1607907645292-03a60174c2cf" alt="Cyber Security">
+                    <img src="https://images.unsplash.com/photo-1607907645292-03a60174c2cf" alt="Imagem ilustrativa sobre Cyber Security">
                     <h3>Cyber Security</h3>
                     <p>Protegemos seus dados com as mais avançadas tecnologias de segurança digital.</p>
                 </div>
                 <div class="feature">
-                    <img src="https://images.unsplash.com/photo-1556740749-887f6717d7e4" alt="IoT">
+                    <img src="https://images.unsplash.com/photo-1556740749-887f6717d7e4" alt="Imagem ilustrativa sobre Internet das Coisas (IoT)">
                     <h3>IoT</h3>
                     <p>Conectamos dispositivos para otimizar processos e criar soluções inteligentes.</p>
                 </div>
                 <div class="feature">
-                    <img src="https://images.unsplash.com/photo-1561948953-4817fdff7edb" alt="Suporte Técnico">
+                    <img src="https://images.unsplash.com/photo-1561948953-4817fdff7edb" alt="Imagem ilustrativa sobre Suporte Técnico">
                     <h3>Suporte Técnico</h3>
                     <p>Equipe especializada disponível para resolver problemas e garantir a continuidade do seu negócio.</p>
                 </div>
@@ -64,4 +64,4 @@
 
     <script src="script.js"></script>
 </body>
-</html>  
+</html>
