--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
-                    <li><a href="sobre.html">Sobre Nós</a></li>
+                    <li><a href="sobre.html" class="active">Sobre Nós</a></li>
                     <li><a href="contatos.html">Contatos</a></li>
                 </ul>
             </nav>
