--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TH Soluções em TI - Início</title>
+    <!-- Link para o CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -59,6 +60,7 @@
         </div>
     </footer>
 
+    <!-- Script JS (se necessário) -->
     <script src="script.js"></script>
 </body>
 </html>
