--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <section class="hero">
         <div class="hero-content">
             <h2>Levamos sua empresa ao futuro com tecnologia inovadora</h2>
-            <p>Soluções de TI personalizadas para o seu negócio. Cyber Security, IoT, Suporte e muito mais.</p>
-            <a href="servicos.html" class="btn-primary">Nossos Serviços</a>
+            <p>Oferecemos soluções de TI personalizadas para o seu negócio. Cyber Security, IoT, Suporte e muito mais!</p>
+            <a href="servicos.html" class="btn-primary">Conheça nossos Serviços</a>
         </div>
     </section>
 
@@ -50,6 +50,14 @@
                     <p>Equipe especializada disponível para resolver problemas e garantir a continuidade do seu negócio.</p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- Sobre a Empresa -->
+    <section class="about-us">
+        <div class="container">
+            <h2 class="section-title">Sobre a TH Soluções em TI</h2>
+            <p>A TH Soluções em TI é uma empresa focada em entregar as melhores soluções tecnológicas para empresas de todos os portes. Com uma equipe altamente qualificada, ajudamos nossos clientes a se manterem seguros, produtivos e inovadores no mundo digital.</p>
         </div>
     </section>
 
