--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TH Soluções em TI - Início</title>
-    <!-- Link para o CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -26,38 +25,30 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h2>Levamos sua empresa ao futuro com tecnologia inovadora</h2>
-            <p>Oferecemos soluções de TI personalizadas para o seu negócio. Cyber Security, IoT, Suporte e muito mais!</p>
-            <a href="servicos.html" class="btn-primary">Conheça nossos Serviços</a>
+            <h2>Bem-vindo à TH Soluções em TI</h2>
+            <p>Transformando tecnologia em soluções para o seu negócio.</p>
+            <a href="servicos.html" class="btn-primary">Nossos Serviços</a>
         </div>
     </section>
 
     <!-- Serviços Destaques -->
     <section class="highlights">
         <div class="container">
-            <h2 class="section-title">Por que escolher a TH Soluções?</h2>
+            <h2 class="section-title">Nossos Diferenciais</h2>
             <div class="features">
                 <div class="feature">
-                    <h3>Cyber Security</h3>
-                    <p>Protegemos seus dados com as mais avançadas tecnologias de segurança digital.</p>
+                    <h3>Inovação</h3>
+                    <p>Oferecemos soluções tecnológicas modernas e eficientes.</p>
                 </div>
                 <div class="feature">
-                    <h3>IoT</h3>
-                    <p>Conectamos dispositivos para otimizar processos e criar soluções inteligentes.</p>
+                    <h3>Suporte Dedicado</h3>
+                    <p>Equipe qualificada para atender suas necessidades de TI.</p>
                 </div>
                 <div class="feature">
-                    <h3>Suporte Técnico</h3>
-                    <p>Equipe especializada disponível para resolver problemas e garantir a continuidade do seu negócio.</p>
+                    <h3>Segurança</h3>
+                    <p>Proteção avançada para seus dados e sistemas.</p>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <!-- Sobre a Empresa -->
-    <section class="about-us">
-        <div class="container">
-            <h2 class="section-title">Sobre a TH Soluções em TI</h2>
-            <p>A TH Soluções em TI é uma empresa focada em entregar as melhores soluções tecnológicas para empresas de todos os portes. Com uma equipe altamente qualificada, ajudamos nossos clientes a se manterem seguros, produtivos e inovadores no mundo digital.</p>
         </div>
     </section>
 
@@ -67,8 +58,6 @@
             <p>&copy; 2024 TH Soluções em TI. Todos os direitos reservados.</p>
         </div>
     </footer>
-
-    <!-- Script JS (se necessário) -->
-    <script src="script.js"></script>
 </body>
 </html>
+
