--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         </div>
     </header>
 
-    <!-- Hero Section -->
+    <!-- Seção Hero -->
     <section class="hero">
         <div class="hero-content">
-            <h2>Bem-vindo à TH Soluções em TI</h2>
-            <p>Transformando tecnologia em soluções para o seu negócio.</p>
-            <a href="servicos.html" class="btn-primary">Nossos Serviços</a>
+            <h2>Transforme seu Negócio com Inovação Tecnológica</h2>
+            <p>Oferecemos soluções de TI que impulsionam sua empresa para o futuro.</p>
+            <a href="servicos.html" class="btn-primary">Conheça nossos Serviços</a>
         </div>
     </section>
 
@@ -37,16 +37,16 @@
             <h2 class="section-title">Nossos Diferenciais</h2>
             <div class="features">
                 <div class="feature">
-                    <h3>Inovação</h3>
-                    <p>Oferecemos soluções tecnológicas modernas e eficientes.</p>
+                    <h3>Cyber Security</h3>
+                    <p>Proteção avançada para seus dados e redes.</p>
+                </div>
+                <div class="feature">
+                    <h3>Infraestrutura de Redes</h3>
+                    <p>Conectividade estável e eficiente para sua empresa.</p>
                 </div>
                 <div class="feature">
                     <h3>Suporte Dedicado</h3>
-                    <p>Equipe qualificada para atender suas necessidades de TI.</p>
-                </div>
-                <div class="feature">
-                    <h3>Segurança</h3>
-                    <p>Proteção avançada para seus dados e sistemas.</p>
+                    <p>Equipe qualificada pronta para atender suas necessidades.</p>
                 </div>
             </div>
         </div>
@@ -60,4 +60,3 @@
     </footer>
 </body>
 </html>
-
