--- a/index.html
+++ b/index.html
@@ -7,56 +7,58 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Cabeçalho -->
-    <header class="header">
-        <div class="container">
-            <h1 class="logo">TH Soluções em TI</h1>
-            <nav class="navbar" aria-label="Navegação principal">
-                <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
-                    <li><a href="sobre.html">Sobre Nós</a></li>
-                    <li><a href="contatos.html">Contatos</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
 
-    <!-- Seção Hero -->
-    <section class="hero">
-        <div class="hero-content">
-            <h2>Transforme seu Negócio com Inovação Tecnológica</h2>
-            <p>Oferecemos soluções de TI que impulsionam sua empresa para o futuro.</p>
-            <a href="servicos.html" class="btn-primary">Conheça nossos Serviços</a>
-        </div>
-    </section>
+<!-- Cabeçalho -->
+<header class="header">
+    <div class="container">
+        <h1 class="logo">TH Soluções em TI</h1>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="sobre.html">Sobre Nós</a></li>
+                <li><a href="contatos.html">Contatos</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
-    <!-- Serviços Destaques -->
-    <section class="highlights">
-        <div class="container">
-            <h2 class="section-title">Nossos Diferenciais</h2>
-            <div class="features">
-                <div class="feature">
-                    <h3>Cyber Security</h3>
-                    <p>Proteção avançada para seus dados e redes.</p>
-                </div>
-                <div class="feature">
-                    <h3>Infraestrutura de Redes</h3>
-                    <p>Conectividade estável e eficiente para sua empresa.</p>
-                </div>
-                <div class="feature">
-                    <h3>Suporte Dedicado</h3>
-                    <p>Equipe qualificada pronta para atender suas necessidades.</p>
-                </div>
+<!-- Seção Hero -->
+<section class="hero">
+    <div class="hero-content">
+        <h2>Impulsione seu Negócio com Tecnologia Inovadora</h2>
+        <p>Soluções em TI feitas para transformar sua empresa.</p>
+        <a href="servicos.html" class="btn-primary">Conheça nossos Serviços</a>
+    </div>
+</section>
+
+<!-- Serviços Destaques -->
+<section class="highlights">
+    <div class="container">
+        <h2 class="section-title">Nossos Serviços</h2>
+        <div class="features">
+            <div class="feature">
+                <h3>Cyber Security</h3>
+                <p>Proteção avançada para seus dados e redes.</p>
+            </div>
+            <div class="feature">
+                <h3>Infraestrutura de Redes</h3>
+                <p>Conectividade estável e eficiente para sua empresa.</p>
+            </div>
+            <div class="feature">
+                <h3>Suporte Técnico</h3>
+                <p>Equipe dedicada para atender suas necessidades.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- Rodapé -->
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 TH Soluções em TI. Todos os direitos reservados.</p>
-        </div>
-    </footer>
+<!-- Rodapé -->
+<footer class="footer">
+    <div class="container">
+        <p>&copy; 2024 TH Soluções em TI. Todos os direitos reservados.</p>
+    </div>
+</footer>
+
 </body>
 </html>
